# hackaton-open-overheid

./: .env.example  .gitignore  AGENTS.md  Dockerfile.base  LICENSE  README.md  config.json  docker-compose.yaml  pyproject.toml
0-webapp/: .env.example  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml
0-webapp/.github/: copilot-instructions.md
0-webapp/app/: globals.css  layout.tsx  page-content.tsx  page.tsx
0-webapp/app/document-status/: page.tsx
0-webapp/app/home/: page.tsx
0-webapp/app/ingest/: page.tsx
0-webapp/app/processed-documents/: page.tsx
0-webapp/app/theme-demo/: page.tsx
0-webapp/app/utils/: badge-colors.ts  mindmap-transformer.ts  mongo.ts  pipelineStatus.ts  types.ts
0-webapp/components/: MainInput.styles.tsx  MainInput.tsx  NavBar.tsx  NoAgentNotification.tsx  ProcessedDocuments.tsx  ThemeDemo.tsx  TranscriptionView.tsx  VoiceTooltipContent.tsx
0-webapp/components/mindmap/: DocumentNode.tsx  InitialNode.tsx  Mindmap.tsx  MindmapContent.tsx  ReasonNode.tsx
0-webapp/providers/: I18nProvider.tsx  ThemeProvider.tsx
0-webapp/styles/: fonts.ts  mantine-globals.css
0-webapp/styles/theme/: index.ts
1-data_ingestion/: Dockerfile  data_ingestion.py
2-validation/: Dockerfile  validation.py
3-pii_scanning/: Dockerfile  __init__.py  pii_scanning.py
4-5-embedding_generator/: Dockerfile  embedding_generator.py
4-metadata_extractor/: Dockerfile  metadata_extractor.py  test_metadata_extractor.py
5-1-data_storage/: Dockerfile  data_storage.py
5-2-search_index/: Dockerfile  search_index.py
5-3-email_notificator/: Dockerfile  README.md  email_notificator.py
6-1-agent-backend/: Dockerfile  main.py  models.py  promps.py
6-agent/: .gitignore  Dockerfile  README.md  agent.py  assistant_functions.py  instructions.txt  requirements.txt  text_input_handler.py
shared/models/: __init__.py  messages.py
shared/tools/: MessageHandler.py  MessageProcessor.py  README.md  ServiceBusConsumer.py  ServiceBusHandler.py  ServiceBusPublisher.py  pipeline_status.py
(+10 files in other folders)
